crates/kdl-config-derive/tests/ui/registry_non_hashmap.stderr
error: registry placement requires HashMap<K, V> field type
 --> tests/ui/registry_non_hashmap.rs:5:5
  |
5 |     #[kdl(registry)]
  |     ^
