crates/kdl-config-derive/tests/ui/registry_non_hashmap.rs
use kdl_config_derive::KdlNode;

#[derive(KdlNode)]
struct Test {
    #[kdl(registry)]
    entries: Vec<String>,
}

fn main() {}
